Added Settings and Results pages, and tidied up other non-test pages

--- a/StrikingInvestigation/Pages/Account.razor
+++ b/StrikingInvestigation/Pages/Account.razor
@@ -1,52 +1,13 @@
 ﻿@page "/Account"
 @using StrikingInvestigation.Utilities
 
-<div class="container mx-0 mx-md-2 my-1 my-md-3">
-    <h1>Account</h1>
+<div>
+    <h1 style="margin-left: 10px">Account</h1>
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         This page will be where users log in and maintain their accounts.
-    </p>
-
-    <br />
-    <br />
-
-    <h2>Device Load</h2>
-
-    <br />
-
-    <p>
-        If playback is not producing even striking when it should, reduce the device load setting
-        below from high to medium or low.
-    </p>
-
-    <p>
-        This will reduce the processing load on your device, but some of the screen visualizations will
-        be turned off.
-    </p>
-
-    <p>
-        With the low setting, you won't be able to stop a test while it's playing -- you will need to wait for it
-        to finish (or close the browser tab).
-    </p>
-
-    <p style="padding-top: 16px">
-        <EditForm Model="@Device">
-            <InputRadioGroup @bind-Value="Device.DeviceLoad">
-                <u>Device Load:</u>
-                <br />
-                <br />
-
-                @foreach (var deviceLoad in (DeviceLoad[])Enum.GetValues(typeof(DeviceLoad)))
-                {
-                    <InputRadio Value="deviceLoad" />
-                    <span>&nbsp;&nbsp;</span>@deviceLoad
-                    <br />
-                    <br />
-                }
-            </InputRadioGroup>
-        </EditForm>
     </p>
 </div>
