--- a/StrikingInvestigation/Pages/Index.razor
+++ b/StrikingInvestigation/Pages/Index.razor
@@ -1,23 +1,26 @@
 ﻿@page "/"
 
-<div class="container mx-0 mx-md-2 my-1 my-md-3">
-    <h1>Striking Investigation</h1>
+<div>
+    <h1 style="margin-left: 10px">Striking Investigation</h1>
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         The aim of this website is to collect striking data from the method ringing community in order to investigate
         whether there is a general purpose algorithm for measuring how accurately a bell has been struck,
         including when the preceding blows are not evenly struck.
     </p>
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         There are three types of test on this website:
     </p>
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>Gap Test:</u> In this test, the user is played a sequence of blows that have striking errors,
         and the user then specifies when they think the last bell should strike.
         The purpose of this test is to determine whether ringers generally agree on when a bell should strike
@@ -26,7 +29,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>A/B Test:</u> In this test, the same block of rows is played twice, once with striking errors and
         once without.
         The user is asked which block has the errors.
@@ -35,7 +39,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>A/V Test:</u> In this test, a bell will be heard to strike, and a visual representation of the strike
         will appear on the screen.
         The user adjusts the position of the bell on the screen until they think the audio and visual components
@@ -45,7 +50,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         In all three cases above, there are predefined tests that are selected from a drop-down list.
         After running a test, the user can click a button to submit their response to a central server for
         aggregation and analysis.
@@ -56,7 +62,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>Submissions:</u> This page show the test results that the user has submitted to the central server.
         <i>
             At present, all submissions are shown. This page will be made user-specific once login functionality
@@ -66,7 +73,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>Privacy:</u> This page explains how test data submitted to the central server will be used,
         and how users' privacy will be protected.
         <i>Not yet implemented.</i>
@@ -74,7 +82,8 @@
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <u>Account:</u> This page is where users log in and maintain their accounts.
         <i>Not yet implemented.</i>
     </p>
