--- a/StrikingInvestigation/Pages/Privacy.razor
+++ b/StrikingInvestigation/Pages/Privacy.razor
@@ -1,22 +1,13 @@
 ﻿@page "/Privacy"
 
-<div class="container mx-0 mx-md-2 my-1 my-md-3">
-    <h1>Privacy</h1>
+<div>
+    <h1 style="margin-left: 10px">Privacy</h1>
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         This page will explain how striking result data submitted to the central server will be used, and how
         the user's privacy will be protected.
-    </p>
-
-    <br />
-
-    <p>
-        Page width: @testSpec.BrowserWidth px
-    </p>
-
-    <p>
-        Page height: @testSpec.BrowserHeight px
     </p>
 </div>
