--- a/StrikingInvestigation/Pages/Submissions.razor
+++ b/StrikingInvestigation/Pages/Submissions.razor
@@ -1,17 +1,19 @@
 ﻿@page "/Submissions"
 
-<div class="container mx-0 mx-md-2 my-1 my-md-3">
-    <h1>Submissions</h1>
+<div>
+    <h1 style="margin-left: 10px">Submissions</h1>
 
     <br />
 
-    <p style="max-width: 800px">
+    <p style="margin-left: 10px;
+            max-width: 800px">
         Here you can see all the submissions you've made for the various striking tests.
         Only the most recent submission for a given test is stored.  If you would like to change
         any of the submissions below, run the test again and your new submission will replace what is below.
     </p>
 
-    <p>
+    <p style="margin-left: 10px;
+            max-width: 800px">
         <i>Note: At present all submissions for all users are shown below. The statement above will be
         implemented once login functionality is added.</i>
     </p>
@@ -24,7 +26,9 @@
     }
     else
     {
-        <table class="table table-striped" style="max-width: 800px">
+        <table class="table table-striped"
+                style="margin-left: 10px;
+                    max-width: 800px">
             <thead>
                 <tr style="font-size: small; color: white; background-color: gray">
                     <th class="align-middle" style="font-weight:normal; padding: 6px">ID</th>
